--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,11 +8,24 @@ a {
 .search-box {
   position: absolute;
   z-index: 1;
-  top: 10px;
+  top: 21px;
   left: 75px;
-  width: 250px;
+  width: 33%;
+  min-width: 250px;
   border: none;
   box-shadow: 3px 3px 0px rgba(0,0,0,0.7);
   font-size: 1.5em;
-  padding: 0.2em;
+  padding: 0.4em 0.2em;
+}
+.get-current-location {
+  position: absolute;
+  z-index: 1;
+  top: 23px;
+  left: 33%;
+  margin-left: 100px;
+  font-size: 2.5em;
+  cursor: pointer;
+}
+.no-geolocation .get-current-location {
+  display: none;
 }
