--- a/views/index.jade
+++ b/views/index.jade
@@ -14,4 +14,5 @@ append head
 
 block content
   input#map-search.search-box(type="text", placeholder="Search Box")
+  .get-current-location 0
   #map-canvas
