--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,5 +9,12 @@ html
       script(src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js')
       script(src='//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js')
       script(src='/javascripts/jquery.omniwindow.js')
-      body
+      script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+              ga('create', 'UA-128159-19', 'xnoty.com');
+        ga('send', 'pageview');
+  body
     block content
