Update min.js link

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ append head
 
   script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places")
   script(src="/javascripts/oms.min.js")
-  script(src="/javascripts/map_points.js")
+  script(src="/javascripts/main.js")
   script(src="/javascripts/tourist.min.js")
 
 
