Fix escaping issue with schedule links

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,5 +28,5 @@ block content
     p <%= address %>
     p <%= fooditems %>
     span
-      a(href="<%= schedule %>") View Schedule
+      a(href!="<%= schedule %>") View Schedule
       |  (pdf)
